<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".Photos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginEnd="15dp"
        android:textSize="12sp"
        android:padding="5dp"
        android:textColor="#ffffff"
        android:background="#000000"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="#000000"
        android:textColor="#ffffff"
        android:onClick="save"
        android:text="@string/save"
        style="?android:attr/buttonBarButtonStyle"
        app:backgroundTint="@null"
        android:textSize="12sp" />

    <ListView
        android:id="@+id/albums_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#000000"
        android:dividerHeight="1px"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/albumText"
            android:layout_marginEnd="15dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:background="#000000"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_height="wrap_content"
            android:id="@+id/albumName"
            android:hint="@string/albumHint"
            android:textSize="12sp"
            android:background="@android:drawable/editbox_background"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:onClick="create"
            android:text="@string/create"
            style="?android:attr/buttonBarButtonStyle"
            app:backgroundTint="@null"
            android:textSize="12sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:onClick="delete"
            android:text="@string/delete"
            style="?android:attr/buttonBarButtonStyle"
            app:backgroundTint="@null"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:onClick="rename"
            android:text="@string/rename"
            style="?android:attr/buttonBarButtonStyle"
            app:backgroundTint="@null"
            android:textSize="12sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:onClick="open"
            android:text="@string/open"
            style="?android:attr/buttonBarButtonStyle"
            app:backgroundTint="@null"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="#000000"
        android:textColor="#ffffff"
        android:onClick="search"
        android:text="@string/search"
        style="?android:attr/buttonBarButtonStyle"
        app:backgroundTint="@null"
        android:textSize="12sp" />

</LinearLayout>