<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".Search">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="#000000"
        android:textColor="#ffffff"
        android:onClick="back"
        android:text="@string/back"
        style="?android:attr/buttonBarButtonStyle"
        app:backgroundTint="@null"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameTag"
            android:layout_marginEnd="15dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:background="#000000"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/nameTag"
            android:hint="@string/nameHint"
            android:textSize="12sp"
            android:background="@android:drawable/editbox_background"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationTag"
            android:layout_marginEnd="15dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:background="#000000"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_height="wrap_content"
            android:id="@+id/locationTag"
            android:hint="@string/locationHint"
            android:textSize="12sp"
            android:background="@android:drawable/editbox_background"
            android:inputType="text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/andOr"
            android:layout_marginEnd="15dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:background="#000000"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/andOr"
            android:hint="@string/andOrHint"
            android:textSize="12sp"
            android:background="@android:drawable/editbox_background"
            android:inputType="text"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="#000000"
        android:textColor="#ffffff"
        android:onClick="search"
        android:text="@string/search"
        style="?android:attr/buttonBarButtonStyle"
        app:backgroundTint="@null"
        android:textSize="12sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:id="@+id/gallery"
            android:orientation="vertical"/>

    </ScrollView>

    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="5dp"
        android:text="@string/albumLabel"
        android:textSize="12sp"
        android:padding="5dp"
        android:textColor="#ffffff"
        android:background="#ffffff"/>

</LinearLayout>
</ScrollView>