<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".DisplayPhoto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:onClick="backPhoto"
            android:text="@string/back"
            style="?android:attr/buttonBarButtonStyle"
            app:backgroundTint="@null"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:id="@+id/photoName"
            android:textSize="12sp"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:background="#000000"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#000000"
            android:onClick="prev"
            android:text="@string/prev"
            android:textColor="#ffffff"
            android:textSize="12sp"
            app:backgroundTint="@null" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#000000"
            android:onClick="next"
            android:text="@string/next"
            android:textColor="#ffffff"
            android:textSize="12sp"
            app:backgroundTint="@null" />

    </LinearLayout>

    <TextView
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="#000000"
        android:padding="5dp"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/tagLabel"
            android:textSize="12sp"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:background="#000000"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tagName"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/tagValue"
            android:hint="@string/tagHint"
            android:textSize="12sp"
            android:background="@android:drawable/editbox_background"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#000000"
            android:onClick="addTag"
            android:text="@string/add"
            android:textColor="#ffffff"
            android:textSize="12sp"
            app:backgroundTint="@null" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#000000"
            android:onClick="removeTag"
            android:text="@string/remove"
            android:textColor="#ffffff"
            android:textSize="12sp"
            app:backgroundTint="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/albumLabel"
            android:textSize="12sp"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:background="#000000"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/albums"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:onClick="move"
            android:text="@string/moveTo"
            style="?android:attr/buttonBarButtonStyle"
            app:backgroundTint="@null"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="5dp"
        android:text="@string/albumLabel"
        android:textSize="12sp"
        android:padding="5dp"
        android:textColor="#ffffff"
        android:background="#ffffff"/>

</LinearLayout>
</ScrollView>