<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".ShowAlbum">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:id="@+id/name"
        android:textSize="12sp"
        android:padding="5dp"
        android:textColor="#ffffff"
        android:background="#000000"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="#000000"
        android:textColor="#ffffff"
        android:onClick="back"
        android:text="@string/back"
        style="?android:attr/buttonBarButtonStyle"
        app:backgroundTint="@null"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:onClick="add"
            android:text="@string/add"
            style="?android:attr/buttonBarButtonStyle"
            app:backgroundTint="@null"
            android:textSize="12sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:onClick="remove"
            android:text="@string/remove"
            style="?android:attr/buttonBarButtonStyle"
            app:backgroundTint="@null"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="#000000"
        android:textColor="#ffffff"
        android:onClick="display"
        android:text="@string/display"
        style="?android:attr/buttonBarButtonStyle"
        app:backgroundTint="@null"
        android:textSize="12sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:id="@+id/gallery"
            android:orientation="vertical"/>
    </ScrollView>

    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="5dp"
        android:text="@string/albumLabel"
        android:textSize="12sp"
        android:padding="5dp"
        android:textColor="#ffffff"
        android:background="#ffffff"/>

</LinearLayout>